--- a/vagrant/nginx/app.conf
+++ b/vagrant/nginx/app.conf
@@ -18,10 +18,10 @@ server {
    }
 
    # uncomment to avoid processing of calls to non-existing static files by Yii
-   #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
-   #    try_files $uri =404;
-   #}
-   #error_page 404 /404.html;
+   location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
+       try_files $uri =404;
+   }
+   error_page 404 /404.html;
 
    location ~ \.php$ {
        include fastcgi_params;
