Решена проблема с обновлением статики

--- a/vagrant/nginx/app.conf
+++ b/vagrant/nginx/app.conf
@@ -18,10 +18,10 @@ server {
    }
 
    # uncomment to avoid processing of calls to non-existing static files by Yii
-   location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
-       try_files $uri =404;
-   }
-   error_page 404 /404.html;
+   #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
+   #    try_files $uri =404;
+   #}
+   #error_page 404 /404.html;
 
    location ~ \.php$ {
        include fastcgi_params;
@@ -33,5 +33,12 @@ server {
 
    location ~ /\.(ht|svn|git) {
        deny all;
+   }
+
+   location ~* ^.+\.(js|css)$ {
+       #old style: add_header Cache-Control "no-store, no-cache, must-revalidate, post-check=0, pre-check=0";
+       #old style: add_header Pragma "no-cache";
+       expires -1;
+       sendfile off; #if you're using virtualbox (it is not about cache, but you will need it) https://www.vagrantup.com/docs/synced-folders/virtualbox.html
    }
 }
