--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "yiisoft/yii2-jui": "^2.0",
-        "kartik-v/yii2-widget-select2": "@dev"
+        "kartik-v/yii2-widget-select2": "@dev",
+        "bower-asset/jqgrid": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
