--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "yiisoft/yii2-jui": "^2.0",
-        "kartik-v/yii2-widget-select2": "@dev",
-        "bower-asset/jqgrid": "*"
+        "bower-asset/jqgrid": "*",
+        "bower-asset/select2": "=3.5.4",
+        "silverfire/select2-bootstrap3-css": "^1.5"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
