--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "yiisoft/yii2-jui": "^2.0",
-        "bower-asset/jqgrid": "*",
+        "bower-asset/jqgrid": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
