--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "kartik-v/yii2-widget-datetimepicker": "*",
         "kartik-v/yii2-mpdf": "*",
         "kartik-v/yii2-export": "*",
-        "phpoffice/phpexcel": "1.8.1"
+        "phpoffice/phpexcel": "1.8.1",
+        "miloschuman/yii2-highcharts-widget": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
