--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "kartik-v/yii2-mpdf": "*",
         "kartik-v/yii2-export": "*",
         "phpoffice/phpexcel": "1.8.1",
-        "miloschuman/yii2-highcharts-widget": "dev-master"
+        "miloschuman/yii2-highcharts-widget": "dev-master",
+        "lesha724/yii2-ckeditor": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
